# syslog-ng

./: README.md  configure.ac  requirements.txt  syslog-ng-config.h.in
.github/codeql/: codeql-config.yml
.github/workflows/: codeql.yml  create-packages.yml  dbld-images.yml  devshell-build.yml  devshell.yml  freebsd.yml  macos.yml  packages.yml  publish-docker-image.yml  test-deb-packages.yml  trigger-publish-docker-image.yml  upload-packages.yml
cmake/: enable_cpp.cmake
contrib/: syslog-ng-debun
dbld/: Makefile.am  build.manifest  packages.manifest  rules
dbld/images/: fedora-latest.dockerfile  ubuntu-resolute.dockerfile
doc/: CMakeLists.txt  Makefile.am
docker/: dockerhub-overview-deb.md  dockerhub-overview-rpm.md  syslog-ng.deb.dockerfile  syslog-ng.rpm.dockerfile
lib/: atomic-gssize.h  cfg-lexer.c  cfg-source.c  cfg.c  file-perms.c  file-perms.h  host-id.c  host-resolve.c  logqueue-fifo.c  logqueue.h  logscheduler.c  logwriter.c  messages.c  messages.h  service-management.c
lib/compat/tests/: test_strtok_r.c
lib/eventlog/src/: evtctx.c  evtlog.h  evttags.c
lib/logproto/: logproto-http-scraper-responder-server.c  logproto-http-server.c  logproto-http-server.h  logproto-text-server.c
lib/multi-line/: multi-line-pattern.c  smart-multi-line.c
lib/stats/: stats-cluster-key-builder.c  stats-control.c  stats-registry.c  stats-registry.h
lib/tests/: test_clone_logmsg.c  test_findcrlf.c  test_hostname.c  test_logqueue.c  test_logsource.c  test_persist_state.c  test_reloc.c  test_str-utils.c  test_utf8utils.c
lib/timeutils/: zoneinfo.c
lib/transport/: tls-context.c  tls-context.h  tls-verifier.c
modules/afmongodb/: CMakeLists.txt  afmongodb-private.h  afmongodb-worker.c
modules/afsnmp/: afsnmpdest.c
modules/afsocket/: afinet-dest.c
modules/afsql/: afsql.c
modules/afuser/: Makefile.am  afuser-grammar.ym  afuser-parser.c  afuser.c  afuser.h
modules/basicfuncs/: str-funcs.c
modules/correlation/: patternize.c  pdb-action.c  pdb-load.c
modules/diskq/: logqueue-disk-non-reliable.c  logqueue-disk-reliable.c  logqueue-disk.c
modules/grpc/: CMakeLists.txt
modules/secure-logging/: CMakeLists.txt  Makefile.am  secure-logging.c  slog.c  slog.h
modules/secure-logging/slogencrypt/: Makefile.am  slogencrypt.c
modules/secure-logging/slogkey/: Makefile.am  slogkey.c
modules/secure-logging/slogverify/: Makefile.am  slogverify.c
modules/secure-logging/tests/: Makefile.am  test_secure_logging.c
news/: bugfix-5697.md  bugfix-5700.md  bugfix-5701.md  bugfix-5712.md  developer-note-5680.md  feature-5709.md
packaging/debian/: control  rules
packaging/opensuse/: syslog-ng.spec
packaging/rhel/: syslog-ng.spec
persist-tool/: add.c
scl/: Makefile.am
scl/stats-exporter/: plugin.conf
scripts/: make-and-check.sh
tests/: CMakeLists.txt  Makefile.am
tests/copyright/: policy
tests/functional/: test_filters.py
tests/light/: TESTING_GUIDE.md
(+66 files in other folders)
